[fix] collapse of top page layout

--- a/docs/style.css
+++ b/docs/style.css
@@ -22,7 +22,7 @@ body {
 
 #parent {
     width: 100%;
-    height: calc(100% - 332px);
+    height: calc(100% - 366px);
 }
 
 .title-area {
